--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
     </div>
 </section>
-<section></section>
+<section>
+    <div>
+        
+    </div>
+
+</section>
 </body>
 </html>
