--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 <section class="main_banner">
     <div class="container_1">
-        <h2>Photographer & Filmmaker</h2>
+        <h3>Photographer & Filmmaker</h3>
         <h1>Aperture Studios</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
     </div>
@@ -48,6 +48,28 @@
         <li>100</li>
         <li>Iceland</li>
     </ul>
+</section>
+<section class="past_clients_banner">
+    <h2>Past clients</h2>
+    <p>Trusted by your favourite companies</p>
+    <div class="past_clients_container">
+        <a href="#">
+            <img src="images/sponsor_1.svg" alt="hill_and_hayes">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_2.svg" alt="riksgransen">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_3.svg" alt="studio_cai">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_4.svg" alt="chill_industries">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_5.svg" alt="stockholm">
+        </a>
+
+    </div>
 </section>
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
 </body>
