--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
         <li>Iceland</li>
     </ul>
 </section>
+<section class="overview_banner_1">
+    <div class="overview_container_1">
+        <h3>Sunset at Mount Fuji</h3>
+        <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+    </div>
+    <ul class="fixed_information">
+        <li>1/2000s</li>
+        <li>f/11</li>
+        <li>100</li>
+        <li>Iceland</li>
+    </ul>
+</section>
+<section class="overview_banner_2">
+    <div class="overview_container_2">
+        <h3>Monstera Leafs</h3>
+        <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+    </div>
+    <ul class="fixed_information">
+        <li>1''</li>
+        <li>f/16</li>
+        <li>400</li>
+        <li>Japan</li>
+    </ul>
+</section>
 <section class="past_clients_banner">
     <h2>Past clients</h2>
     <p>Trusted by your favourite companies</p>
@@ -71,6 +95,26 @@
 
     </div>
 </section>
+<section class="overview_banner_3">
+    <div class="overview_container_3">
+        <h3>Star fall in the Himalayas</h3>
+        <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+    </div>
+    <ul class="fixed_information">
+        <li>1/400s</li>
+        <li>f/3,5</li>
+        <li>100</li>
+        <li>Costa Rica</li>
+    </ul>
+</section>
+<section class="pre_footer">
+    <div class="pre_footer_container">
+        <h2>Need help with photography or videography?</h2>
+        <h3>We're here for you!</h3>
+        <a href="#">Get in touch</a>
+    </div>
+</section>
+
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
 </body>
 </html>
