--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
         <li>Iceland</li>
     </ul>
 </section>
+<section class="what_we_do">
+    <div class="wwd_container">
+        <h2>What we do.</h2>
+        <p>The areas that we're specialized in.</p>
+        <div class="d-flex">
+            <div class="wwd_item">
+                <div class="description">
+                    <h4>Product Photography</h4>
+                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                </div>
+                <img src="images/wwd_back_1.jpg" alt="img">
+            </div>
+            <div class="wwd_item">
+                <div class="description">
+                    <h4>Architecture Photography</h4>
+                    <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+                </div>
+                <img src="images/wwd_back_2.jpg" alt="img">
+            </div>
+            <div class="wwd_item">
+                <div class="description">
+                    <h4>Drone Photography</h4>
+                    <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                </div>
+                <img src="images/wwd_back_3.jpg" alt="img">
+            </div>
+            <div class="wwd_item">
+                <div class="description">
+                    <h4>Wildlife Photography</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                </div>
+                <img src="images/wwd_back_4.jpg" alt="img">
+            </div>
+        </div>
+    </div>
+</section>
 <section class="overview_banner_1">
     <div class="overview_container_1">
         <h3>Sunset at Mount Fuji</h3>
@@ -95,6 +131,7 @@
 
     </div>
 </section>
+
 <section class="overview_banner_3">
     <div class="overview_container_3">
         <h3>Star fall in the Himalayas</h3>
@@ -107,6 +144,7 @@
         <li>Costa Rica</li>
     </ul>
 </section>
+
 <section class="pre_footer">
     <div class="pre_footer_container">
         <h2>Need help with photography or videography?</h2>
@@ -114,6 +152,87 @@
         <a href="#">Get in touch</a>
     </div>
 </section>
+
+<footer>
+    <div class="footer_container">
+        <div class="footer_row_1">
+            <div class="f_logo_descr">
+                <img src="images/f_logo.svg">
+                <p>Photographers & videographers capturing the world around us.</p>
+            </div>
+            <div class="footer_lists">
+                <ul>
+                    <li class="fl_title">Business areas</li>
+                    <li>
+                        <a href="#" class="fl_item">Product Photography</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Architecture Photography</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Drone Photography</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Wildlife Photography</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="fl_title">Pages</li>
+                    <li>
+                        <a href="#" class="fl_item">Gear cage</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Featured images</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Style guide</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Instructions</a>
+                    </li>
+                    <li>
+                        <a href="#" class="fl_item">Changelog</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer_row_2">
+            <div>
+                <h3>Subscribe to our newsletter</h3>
+                <p>Read about all the things we do.</p>
+            </div>
+            <form>
+                <input>
+                <button></button>
+            </form>
+        </div>
+        <div class="footer_row_3">
+            <p>© Aperture Photography, Inc. All rights reserved.</p>
+            <div>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="images/twitter.svg">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/instagram.svg">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/facebook.svg">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
 </body>
