--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             </div>
         </div>
     </div>
+    <div>
+        
+    </div>
 </footer>
 
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
