--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Aperture</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aperture</title>
+    <link rel="stylesheet" href="CSS/owl.carousel.css">
+    <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -109,7 +111,7 @@
         <li>Japan</li>
     </ul>
 </section>
-<section class="past_clients_banner">
+<section class="past_clients_banner" style="background-color:gray  ">
     <h2>Past clients</h2>
     <p>Trusted by your favourite companies</p>
     <div class="past_clients_container">
@@ -128,7 +130,15 @@
         <a href="#">
             <img src="images/sponsor_5.svg" alt="stockholm">
         </a>
-
+    </div>
+    <div class="owl-carousel">
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
+        <div> Your Content </div>
     </div>
 </section>
 
@@ -235,5 +245,10 @@
 </footer>
 
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
