--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/owl.carousel.css">
     <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="js/owl.carousel.js"></script>
 </head>
 <body>
 <header>
@@ -245,10 +246,10 @@
 </footer>
 
 <script src="https://kit.fontawesome.com/c090ec296e.js" crossorigin="anonymous"></script>
-<script
-        src="https://code.jquery.com/jquery-3.6.0.min.js"
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
+<script src="js/owl.carousel.js"></script>
 </body>
 </html>
