--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
     <script src="js/owl.carousel.js"></script>
+    <link rel="stylesheet" href="CSS/media.css">
 </head>
 <body>
 <header>
