--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Aperture</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https:/resources/demos/style.css"><meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="CSS/owl.carousel.css">
     <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
@@ -14,12 +15,43 @@
 </head>
 <body>
 <header>
-    <div>
-        <a href="#">
+    <div class="header_container">
+        <a href="#" class="logo">
             <img src="images/logo.svg" alt="logo">
         </a>
+
         <nav>
-            <ul>
+            <div class="menu-btn">
+                <div class="line line__1"></div>
+                <div class="line line__2"></div>
+                <div class="line line__3"></div>
+            </div>
+
+            <div class="sub-menu-btn">
+                <div class="line line__1"></div>
+                <div class="line line__2"></div>
+            </div>
+
+            <ul class="nav-links">
+                <li class="link">
+                    <a href="#">Business areas</a>
+                </li>
+                <li class="link">
+                    <a href="#">Featured images</a>
+                </li>
+                <li class="link">
+                    <a href="#">Gear cage</a>
+                </li>
+                <li class="link">
+                    <a href="#">Contact</a>
+                </li>
+                <li class="link">
+                    <a href="#">Get template</a>
+                </li>
+            </ul>
+        </nav>
+
+            <!--<ul>
                 <li>
                     <a href="#">Business areas</a>
                 </li>
@@ -35,9 +67,7 @@
                 <li>
                     <a href="#">Get template</a>
                 </li>
-            </ul>
-        </nav>
-
+            </ul>-->
     </div>
 </header>
 <section class="main_banner">
@@ -53,42 +83,51 @@
         <li>Iceland</li>
     </ul>
 </section>
+
 <section class="what_we_do">
     <div class="wwd_container">
         <h2>What we do.</h2>
         <p>The areas that we're specialized in.</p>
-        <div class="d-flex">
-            <div class="wwd_item">
-                <div class="description">
-                    <h4>Product Photography</h4>
-                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+
+        <div id="accordion">
+            <h3></h3>
+            <div class="d-flex">
+                <div class="wwd_item">
+                    <div class="description">
+                        <h4>Product Photography</h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                    </div>
+                    <img src="images/wwd_back_1.jpg" alt="img">
                 </div>
-                <img src="images/wwd_back_1.jpg" alt="img">
+                <div class="wwd_item">
+                    <div class="description">
+                        <h4>Architecture Photography</h4>
+                        <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+                    </div>
+                    <img src="images/wwd_back_2.jpg" alt="img">
+                </div>
             </div>
-            <div class="wwd_item">
-                <div class="description">
-                    <h4>Architecture Photography</h4>
-                    <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+            <h3></h3>
+            <div class="d-flex">
+                <div class="wwd_item">
+                    <div class="description">
+                        <h4>Drone Photography</h4>
+                        <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                    </div>
+                    <img src="images/wwd_back_3.jpg" alt="img">
                 </div>
-                <img src="images/wwd_back_2.jpg" alt="img">
-            </div>
-            <div class="wwd_item">
-                <div class="description">
-                    <h4>Drone Photography</h4>
-                    <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                <div class="wwd_item">
+                    <div class="description">
+                        <h4>Wildlife Photography</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                    </div>
+                    <img src="images/wwd_back_4.jpg" alt="img">
                 </div>
-                <img src="images/wwd_back_3.jpg" alt="img">
-            </div>
-            <div class="wwd_item">
-                <div class="description">
-                    <h4>Wildlife Photography</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-                </div>
-                <img src="images/wwd_back_4.jpg" alt="img">
             </div>
         </div>
     </div>
 </section>
+
 <section class="overview_banner_1">
     <div class="overview_container_1">
         <h3>Sunset at Mount Fuji</h3>
@@ -101,6 +140,7 @@
         <li>Iceland</li>
     </ul>
 </section>
+
 <section class="overview_banner_2">
     <div class="overview_container_2">
         <h3>Monstera Leafs</h3>
@@ -113,10 +153,10 @@
         <li>Japan</li>
     </ul>
 </section>
-<section class="past_clients_banner" style="background-color:gray  ">
+<section class="past_clients_banner">
     <h2>Past clients</h2>
     <p>Trusted by your favourite companies</p>
-    <div class="past_clients_container">
+    <div class="past_clients_container owl-carousel">
         <a href="#">
             <img src="images/sponsor_1.svg" alt="hill_and_hayes">
         </a>
@@ -132,15 +172,21 @@
         <a href="#">
             <img src="images/sponsor_5.svg" alt="stockholm">
         </a>
-    </div>
-    <div class="owl-carousel">
-        <div> Your Content </div>
-        <div> Your Content </div>
-        <div> Your Content </div>
-        <div> Your Content </div>
-        <div> Your Content </div>
-        <div> Your Content </div>
-        <div> Your Content </div>
+        <a href="#">
+            <img src="images/sponsor_1.svg" alt="hill_and_hayes">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_2.svg" alt="riksgransen">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_3.svg" alt="studio_cai">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_4.svg" alt="chill_industries">
+        </a>
+        <a href="#">
+            <img src="images/sponsor_5.svg" alt="stockholm">
+        </a>
     </div>
 </section>
 
@@ -250,6 +296,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/owl.carousel.js"></script>
 </body>
