--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="CSS/owl.carousel.css">
     <link rel="stylesheet" href="CSS/owl.theme.default.css">
     <link rel="stylesheet" href="CSS/style.css">
-    <script src="js/owl.carousel.js"></script>
     <link rel="stylesheet" href="CSS/media.css">
+    <link rel="stylesheet" href="CSS/styles_preproc.css">
 </head>
 <body>
 <header>
@@ -50,24 +50,6 @@
                 </li>
             </ul>
         </nav>
-
-            <!--<ul>
-                <li>
-                    <a href="#">Business areas</a>
-                </li>
-                <li>
-                    <a href="#">Featured images</a>
-                </li>
-                <li>
-                    <a href="#">Gear cage</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Get template</a>
-                </li>
-            </ul>-->
     </div>
 </header>
 <section class="main_banner">
